--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@emotion/react": "^11.11.0",
+		"@emotion/styled": "^11.11.0",
+		"@mui/icons-material": "^5.11.16",
+		"@mui/material": "^5.13.3",
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.3.2",
 		"@testing-library/user-event": "^7.1.2",
 		"bootstrap": "^4.5.2",
-		"react": "^16.13.1",
-		"react-dom": "^16.13.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"react-icons": "^3.11.0",
 		"react-scripts": "3.4.3",
 		"uuid": "^8.3.1"
